<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical">

    <include layout="@layout/title" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enable_log"
                    android:textSize="12sp" />

                <Switch
                    android:id="@+id/switch_log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="4dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/auto_provision"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/iv_tip_auto_provision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="4dp"
                    android:src="@drawable/ic_tip"
                    android:tint="@color/grey" />


                <Switch
                    android:id="@+id/switch_auto_provision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="4dp"
                android:background="@color/gray" />

            <!--      extend bearer mode      -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="4dp"
                android:background="@color/gray" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extend_bearer_title"
                    android:textSize="@dimen/info_text_size" />

                <EditText
                    android:id="@+id/et_extend_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:drawableTint="@color/colorPrimary"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="none"
                    android:text="@string/extend_bearer_gatt_adv"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_no_oob"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/iv_tip_no_oob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="4dp"
                    android:src="@drawable/ic_tip"
                    android:tint="@color/grey" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Switch
                    android:id="@+id/switch_no_oob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="4dp"
                android:background="@color/gray" />

            <!--     net key       -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:text="Net Key: "
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/iv_copy_net_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="8dp"
                    android:src="@drawable/ic_copy"
                    android:tint="@color/grey" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_net_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/hex_input"
                android:enabled="false"
                android:padding="2dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="4dp"
                android:background="@color/gray"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:text="App Key: "
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/iv_copy_app_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="8dp"
                    android:src="@drawable/ic_copy"
                    android:tint="@color/grey" />

            </LinearLayout>


            <EditText
                android:id="@+id/et_app_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/hex_input"
                android:enabled="false"
                android:padding="2dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone" />


            <!-- online status -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="4dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_online_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:text="Online-Status: "
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>